# graph-databases

./: README.md  pyproject.toml
src/arangodb/: load.py
src/memgraph/: docker-compose.yml  load.py  loadneo4j.py  mainneo4j.py
src/neo4jdb/: docker-compose.yml  load.py  main.py
